--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,9 +21,9 @@ stages:
       vmImage: ubuntu-latest
     steps:
     - task: Docker@2
-      displayName: Build an image
       inputs:
-        command: build
-        dockerfile: '$(Build.SourcesDirectory)/Dockerfile'
-        tags: |
-          $(tag)
+        containerRegistry: 'docker'
+        repository: 'xm2bwf2ynalz/necnation/'
+        command: 'buildAndPush'
+        Dockerfile: '**/Dockerfile'
+        tags: '1.1.$(Build.BuildId)'
