Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -18,7 +18,8 @@ stages:
   - job: Build
     displayName: Build
     pool:
-      vmImage: ubuntu-latest
+      name: self-agent-pool
+      #vmImage: ubuntu-latest
     steps:
     # - task: Docker@2
     #   inputs:
