--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -18,7 +18,7 @@ stages:
   - job: Build
     displayName: Build
     pool:
-      name: self-agent-pool
+      name: Tokkio-Dev0
       #vmImage: ubuntu-latest
     steps:
     # - task: Docker@2
